# internal/http/api/service/notifications.go
@@ -16,6 +16,14 @@ func NewNotificationsRouter(component notifications.Provider) *notificationsRout
 	return &notificationsRouter{component: component}
 }
 
+// NotificationsWebSocket godoc
+//
+//	@Summary		NotificationsWebSocket
+//	@Description	Connect to a WebSocket to receive notifications
+//	@Tags			Notifications
+//	@Schemes		ws
+//	@Param			Cookie	header	string	true	"X-Authorization"
+//	@Router			/ws/user/notifications [GET]
 func (r *notificationsRouter) NotificationsWebSocket() func(f *fiber.Ctx) error {
 	return websocket.New(func(c *websocket.Conn) {
 		defer func() {
@@ -43,6 +51,17 @@ type notificationRequest struct {
 	Message string `json:"message"`
 }
 
+// SendNotificationToUser godoc
+//
+//	@Summary		SendNotificationToUser
+//	@Description	Sends a notification to user id trough websocket
+//	@Tags			Notifications
+//	@Accept			json
+//	@Produce		json
+//	@Param			request	body	notificationRequest	true	"body"
+//	@Success		200
+//	@Failure		500
+//	@Router			/user/:id/notifications [POST]
 func (r *notificationsRouter) SendNotificationToUser(f *fiber.Ctx) error {
 	accountID, err := uuid.Parse(f.Params("id"))
 	if err != nil {
